# router/auth_users.ts
@@ -2,31 +2,56 @@ import express, { Request, Response, Router } from 'express';
 import jwt from 'jsonwebtoken';
 import books from './booksdb';
 import bcrypt from 'bcrypt';
-
+import { isValid } from '../mongo';
 // declare module 'express-session' {
 //   interface SessionData {
 //     authorization?: { username: string,  accessToken: string}; // Your custom session data properties
 //   }
 // }
 
+// const isValid = (username: string): boolean => {
+//   const userswithsamename = users.filter((user) => {
+//     return user.username === username;
+//   });
+//   return userswithsamename.length > 0;
+// };
 
-const users: { id: string; username: string; hashedPassword: string; createdAt: string; ip:string }[] = [{id: "0", username: 'admin',hashedPassword: '$2b$10$sqnNDaeLbVwvAmcNH2xrVeLSsiO7xJWtSigPoed/2aJYB63nZ5mG.',createdAt:'0',ip:'0'}];
+interface User {
+  _id: any;
+  username: string;
+  hashedPassword: string;
+  createdAt: string;
+  ip: string;
+}
+
+// Create an array of users with the User type
+const users: User[] = [
+  // {
+  //     _id: "0", 
+  //     username: 'admin',
+  //     hashedPassword: '$2b$10$JiRaWP0.nUCz8oBlK8PTcefLeF85KYRYfErfOa4VcO5.dSQ49BG3u',
+  //     createdAt: '0',
+  //     ip: '0'
+  // }
+];
 
 const regd_users: Router = express.Router();
 
 // const users: {id:string; username: string; hashedPassword: string }[] = [{ id: "1", username: 'admin',hashedPassword: 'admin' }];
 
-const isValid = (username: string): boolean => {
-  const userswithsamename = users.filter((user) => {
-    return user.username === username;
-  });
-  return userswithsamename.length > 0;
-};
+// const isValid = (username: string): boolean => {
+//   const userswithsamename = users.filter((user) => {
+//     return user.username === username;
+//   });
+//   return userswithsamename.length > 0;
+// };
+
+
 
 
 // 登录路由中使用会话
 
-regd_users.post('/login', (req: Request, res: Response) => {
+regd_users.post('/login', async (req: Request, res: Response) => {
 /*  #swagger.parameters['body'] = {
         in: 'body',
         description: 'Login with username and password',
@@ -42,12 +67,11 @@ regd_users.post('/login', (req: Request, res: Response) => {
     return res.status(400).json({ message: 'Missing username or password' });
   }
 
-  const user = users.find((user) => user.username === username);
-
+  const user = await isValid(username);
+  
   if (!user) {
-    return res.status(401).json({ message: 'username does not exist' });
+    return res.status(404).json({ message: 'User does not exist!' });
   }
-
 
   bcrypt.compare(password, user.hashedPassword, (err, result) => {
     if (err) {
@@ -87,38 +111,40 @@ regd_users.get('/auth/users', (req: Request, res: Response) => {
   });
 
 
-regd_users.put('/auth/review/:isbn', (req: Request, res: Response) => {
-//  #swagger.description = 'Add/edit review to request body and pass in isbn as query parameter'
+// regd_users.put('/auth/review/:isbn', (req: Request, res: Response) => {
+// //  #swagger.description = 'Add/edit review to request body and pass in isbn as query parameter'
 
-  const isbn: number = +req.params.isbn; // 使用+将参数转换为数字
-  const review: string = req.body.review;
-  const username = req.user.data;
-  //is use username= req.session.authorization.username; is wrong, as we don't know whether the username is property or not, 
-  //so use req.session.authorization?username instead
+//   const isbn: number = +req.params.isbn; // 使用+将参数转换为数字
+//   const review: string = req.body.review;
+//   const username = req.user.data;
+//   //is use username= req.session.authorization.username; is wrong, as we don't know whether the username is property or not, 
+//   //so use req.session.authorization?username instead
 
-  if (!isbn || !review || !username) {
-    return res.status(400).json({ message: 'Invalid request. ISBN, review, and authentication are required.' });
-  }
+//   if (!isbn || !review || !username) {
+//     return res.status(400).json({ message: 'Invalid request. ISBN, review, and authentication are required.' });
+//   }
 
 
-  const filteredReviews = books[isbn]?.reviews.filter((r) => {
-    return r.username === username;
-  });
+//   const filteredReviews = books[isbn]?.reviews.filter((r) => {
+//     return r.username === username;
+//   });
 
-  if (filteredReviews?.length > 0) {
-    const existingReview = filteredReviews[0];
-    existingReview.review = review;
-    return res.status(200).json({ message: 'Review modified successfully.' });
-  } else {
-    // Add a new review
-    const newReview = {
-      username: username,
-      review: review,
-    };
-    books[isbn]?.reviews.push(newReview);
-    return res.status(200).json({ message: 'Review added successfully.' });
-  }
+//   if (filteredReviews?.length > 0) {
+//     const existingReview = filteredReviews[0];
+//     existingReview.review = review;
+//     return res.status(200).json({ message: 'Review modified successfully.' });
+//   } else {
+//     // Add a new review
+//     const newReview = {
+//       username: username,
+//       review: review,
+//     };
+//     books[isbn]?.reviews.push(newReview);
+//     return res.status(200).json({ message: 'Review added successfully.' });
+//   }
 
-});
+// });
 
-export { regd_users, isValid, users };
+
+
+export { regd_users,  users, User };
