# router/general.ts
@@ -1,11 +1,14 @@
 import express, { Request, Response, Router } from 'express';
-import { isValid } from './auth_users';
+// import { isValid } from './auth_users';
+import { isValid } from '../mongo';
 import books from './booksdb';
 import { v4 as uuidv4 } from 'uuid';
 import bcrypt from 'bcrypt';
-import {users} from './auth_users';
+import {users, User} from './auth_users';
 import morganMiddleware from '../morgan';
 import logger from '../logger';
+import {client} from '../mongo';
+import { MongoClient, ServerApiVersion } from "mongodb";
 // import connectToDatabase from '../mongo';
 // import User from '../src/schema/User'; // Import your Mongoose model
 
@@ -18,13 +21,14 @@ const public_users: Router = express.Router();
 
 public_users.use(morganMiddleware);
 
-public_users.post('/register',  async(req: Request, res: Response) => {
-//  #swagger.summary = 'User registration'
-  /*  #swagger.requestBody = {
-        required: true,
-        schema: { $ref: "#/definitions/swaggerRegisterUser" },
-      }
-  */
+
+export async function insertUser(client: MongoClient, user: User): Promise<void> {
+    const result = await client.db("Canvas").collection("users").insertOne(user);
+    console.log(`New user created with the following id: ${result.insertedId}`);
+  }
+
+// public_users.post('/register',  async(req: Request, res: Response) => {
+//  
 
 // try {
 //     const newUser = new User(req.body);
@@ -39,39 +43,43 @@ public_users.post('/register',  async(req: Request, res: Response) => {
     //     return res.status(400).send(error.details[0].message);
     // }
 
-  const username: string = req.body.username;
-  const password: string = req.body.password;
-  
-  const id: string = uuidv4() + '-U-' + Date.now();
-  
-  if (username && password) {
-    if (!isValid(username)) {
-      bcrypt.hash(password, saltRounds, (err, hash) => {
-        if (err) {
-          // Handle error
-        } else {
-          // Store the hash in your database or use it as needed
-          const hashedPassword: string = hash;
-          const ipAddress: any = req.ip;
-          users.push({ id, username, hashedPassword, createdAt: new Date().toISOString(), ip: ipAddress });
-
-          const logMessage = `|User register| username: ${username}, id: ${id} at ${ipAddress}  |success|.`;
-          logger.info(logMessage);
-
-          const responseMessage = `User ${username} registered successfully!`;
-          return res.status(200).json({ responseMessage });
-        }
-      });
+    public_users.post('/register', async (req: Request, res: Response) => {
+        // #swagger.summary = 'User registration'
+        /*  #swagger.requestBody = {
+                required: true,
+            }
+        */
+        const username: string = req.body.username;
+        const password: string = req.body.password;
       
-    } else {
-      return res.status(404).json({ message: 'User already exists!' });
-    }
-  }
-
-  const message = 'Unable to register user.';
-  logger.error(message);
-  return res.status(404).json({ message});
-});
+        if (!username || !password) {
+            return res.status(400).json({ message: 'Missing username or password' });
+        }
+    
+        const user = await isValid(username);
+        if (user) {
+            return res.status(404).json({ message: 'User already exists!' });
+        }
+    
+        try {
+            const hashedPassword: string = await bcrypt.hash(password, saltRounds);
+            const ipAddress: any = req.ip;
+            const id: string = uuidv4() + '-U-' + Date.now();
+            const newUser = { _id: id, username: username, hashedPassword: hashedPassword, createdAt: new Date().toISOString(), ip: ipAddress };
+            // users.push(newUser);
+            logger.info(`|User register| username: ${username}, id: ${id} at ${ipAddress}  |success|.`);
+    
+            await client.connect();
+            await client.db("admin").command({ ping: 1 });
+            await insertUser(client, newUser);
+            await client.close();
+    
+            return res.status(200).json({ message: `User ${username} registered successfully!` });
+        } catch (error) {
+            logger.error('Unable to register user.');
+            return res.status(500).json({ message: 'An error occurred during registration.' });
+        }
+    });
 
 public_users.get('/', async (req: Request, res: Response) => {
 //  #swagger.description = 'Get all books information'
